trying to make fixed background work on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -5,19 +5,37 @@
 
 
 html {
-  background-color:#22242D;
+  /* background-color:#22242D;
   background-image: url('./images/trees.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  height: 100vh;
+  height: 100vh; */
   font-size: 16px;
+}
+
+html:before {
+    background-color:#22242D;
+    content: "";
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+    background: url('./images/trees.jpg') no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 @media (hover: none) {
   .homeHero {
-      background-attachment: initial;
+      background-attachment: scroll;
+
   }
 }
 
